# NSQCu

./: CicruleUpdater.py  CircleUpdaterB.py  KLADu.py  NSQCu.py  NSQCupdater.py  addons  addons.json  bl.txt  run.py
RUST/nightwatch-updater/: Cargo.toml
RUST/nightwatch-updater/src/: main.rs
