[package]
name = "nightwatch-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
egui = "0.24"
eframe = { version = "0.24.1", features = ["persistence", "glow"], default-features = false } # Оставляем glow
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zip = "0.6"
tempfile = "3.5"
log = "0.4"
env_logger = "0.11"
indexmap = { version = "1.9", features = ["serde-1"] }
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[target.x86_64-pc-windows-gnu]
rustflags = [
    "-C", "link-args=-static -lssp -lwinpthread -Wl,-Bstatic",
    "-C", "panic=abort"
]
